# world-observer-agent

./: .env.example  .gitignore  LICENSE  README.md  agent_interface.py  create.sh  pyproject.toml  run.py
tests/: test_smoke.py
world_observer/: __init__.py  app.py  models.py  visual_style.py
world_observer/agents/: brain.py  creation.py  decision.py  design.py  feedback.py  observe.py  pattern.py  platform_intelligence.py  publish.py  viral_intelligence.py
world_observer/integrations/: browser.py  codex.py  config.py  image_backend.py  llm.py  obsidian.py  storage.py  wechat_importer.py
