[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "world-observer-agent"
version = "0.1.0"
description = "A local-first research assistant that observes world signals, extracts patterns, connects notes, and drafts platform-aware content."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "11-lilyye" }
]
keywords = ["ai-agent", "obsidian", "content-creation", "research", "wechat"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business",
  "Topic :: Text Processing",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]
wechat = ["crawl4ai", "aiohttp"]

[project.scripts]
woa = "agent_interface:main"
world-observer = "run:main"

[tool.setuptools]
py-modules = ["agent_interface", "run"]
packages = ["world_observer", "world_observer.agents", "world_observer.integrations"]

[tool.pytest.ini_options]
testpaths = ["tests"]
